--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,6 @@
 
 .vs/*
-test/*
-/include/hop.hpp.bak
-/include/hop - Copy.hpp
-/include/hop - Copy (2).hpp
-/include/hop - Copy (3).hpp
+/hop/.vs/hop/v16
+/hop/Debug
+/hop/x64/Debug
+/out/build
